<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/profile_bg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            app:srcCompat="@drawable/avatar_default"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/tv_nick_name" app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_switch_day_night"
            android:id="@+id/imageButton"
            android:background="@drawable/btn_round_bg" app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" android:layout_marginEnd="32dp"/>

    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/btn_edit"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="John Doe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nick_name"
            style="@style/Profile.Header.Nickname"
            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_rank"/>
    <TextView
            android:text="Android Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rank" style="@style/Profile.Header.Rank"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name" app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/imageView"/>
    <View
            android:layout_width="0dp"
            android:layout_height="@dimen/space_maximum_72"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/view"
            android:background="@color/color_primary_light"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/view2" app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginBottom="16dp"
            android:background="@color/color_divider_light"/>
    <TextView
            android:id="@+id/tv_rating"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  style="@style/Profile.Metrics.Value"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            android:drawableLeft="@drawable/ic_sp_24"/>
    <TextView
            android:text="@string/profile_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" style="@style/Profile.Metrics.Label"
            app:layout_constraintEnd_toEndOf="@+id/tv_rating"
            app:layout_constraintStart_toStartOf="@+id/tv_rating" app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_respect"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  style="@style/Profile.Metrics.Value"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/view2" app:layout_constraintEnd_toEndOf="@+id/view"
            android:drawableLeft="@drawable/ic_respect_24"/>
    <TextView
            android:text="@string/profile_label_respect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" style="@style/Profile.Metrics.Label"
            app:layout_constraintEnd_toEndOf="@+id/tv_respect"
            app:layout_constraintStart_toStartOf="@+id/tv_respect" app:layout_constraintTop_toBottomOf="@+id/tv_respect"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"/>


    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_avatar"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name" tools:text="John"
                style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/wr_first_name"
            app:layout_constraintStart_toEndOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            style="@style/Profile.EditText.Single">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/view3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="72dp"
            app:layout_constraintTop_toBottomOf="@+id/wr_last_name" android:background="@color/color_divider_dark"
            android:layout_marginTop="5dp"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_about"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/view3"
            android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView4" app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:id="@+id/wr_about" style="@style/Profile.EditText.MultiLine">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about" tools:text="Something"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/view4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/wr_about" android:layout_marginStart="72dp"
            android:background="@color/color_divider_dark" android:layout_marginTop="5dp"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_repo"
            android:id="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView5" app:layout_constraintTop_toTopOf="@+id/imageView5"
            android:layout_marginStart="16dp"
            style="@style/Profile.EditText.Single" android:id="@+id/textInputLayout4"
            app:layout_constraintEnd_toStartOf="@+id/ic_eye" android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository" tools:text="https://github/john_doe"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_eye_24dp"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintVertical_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>